--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "keywords": [],
   "description": "",
   "dependencies": {
-    "truffle-assertions": "^0.9.2"
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.3.4",
+    "web3-min-js": "^1.0.0"
   },
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.10"
